bug fix folders not showing

--- a/css/t485.css
+++ b/css/t485.css
@@ -539,7 +539,7 @@ a:focus {
 
 
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:767px) {
     .modal-body {
         padding: 0px;
     }
